css/style.css
    body {
        margin: 0;
        padding: 0;
    }

    #map {
        position: absolute;
        top: 0;
        bottom: 0;
        width: 100%;
    }

    .distance-container {
        position: absolute;
        bottom: 5%;
        margin-bottom: 5px;
        left: 5%;
        z-index: 1;
    }
    
    .distance-container > * {
        background-color: rgba(0, 0, 0, 0.5);
        color: #fff; 
        font-size: 12px;
        font-family: verdana;
        font-weight: bold;
        line-height: 12px;
        display: block;
        margin: 0;
        padding: 10px;
        border-radius: 3px;
    }

    #geocoder-container {
        position: absolute;
        top: 0;
        left: 10%;
        width: 100%;
        margin-top: 5px;
    }

    #geocoder-container > div {
        min-width: 10%;
        margin-left: 5%;
    }

    ul {
        margin: 0;
        padding: 0;
        list-style-type: none;
    }

    ul span#one {
        align: left;
        vertical-align: middle;
        font-size: 250%;
        color: #F276E4;
        opacity: 0.8;
    }

    ul span#two {
        align: left;
        vertical-align: middle;
        width: 16%;
        font-size: 1%;
        height: 4px;
        border: none;
        border-top: 3px solid red;
        margin: 1;
        padding: 1;
        opacity: 0.8;
    }

    .legend label,

    .legend span {
        display: block;
        float: left;
        height: 16px;
        width: 20%;
        text-align: center;
        font: 11px/16px "Helvetica Neue", Arial, Helvetica, sans-serif;
        color: #808080;
    }

    #legend {
        position: absolute;
        bottom: 5%;
        right: 5%;
        width: 250px;
        z-index: 1;
        background: rgba(255, 255, 255, 0.75);
        padding: 12px;
    }

    #menu {
        background: #fff;
        position: absolute;
        z-index: 9;
        top: 7%;
        right: 2%;
        border-radius: 2px;
        width: 150px;
        border: 1px solid rgba(0, 0, 0, 0.2);
        font: 10px/15px 'Helvetica Neue', Arial, Helvetica, sans-serif;
        opacity: 0.75;
    }

    #menu a {
        font-size: 11px;
        color: #404040;
        display: block;
        margin: 0;
        padding: 0;
        padding: 8px;
        text-decoration: none;
        border-bottom: 1px solid rgba(0, 0, 0, 0.25);
        text-align: left;
    }

    #menu a:last-child {
        border: none;
    }

    #menu a:hover {
        background-color: #f8f8f8;
        color: #404040;
    }

    #menu a.active {
        background-color: #3887be;
        color: #ffffff;
    }

     #menu a.active:before {
        content: '✔';
        margin-right: 5px;
    }

    #menu a.active:hover {
        background: #3074a4;
    }

    #features {
        position: absolute;
        bottom: 0;
        left: 3%;
        overflow: visible;
        font-size: 12px;
        font-family: verdana;
        font-weight: bold;
        color: navy;
        line-height: 12px;
        background: rgba(255, 255, 255, 0.5);
        padding: 10px;
    }

    .help-tip {
        text-align: center;
        background-color: #0E51F7;
        border-radius: 50%;
        width: 14px;
        height: 14px;
        font-size: 12px;
        line-height: 12px;
        cursor: default;
    }

    #Fault {
        position: absolute;
        top: 10%;
        left: 52%;
        text-align: center;
        background-color: #0E51F7;
        border-radius: 50%;
        width: 14px;
        height: 14px;
        font-size: 12px;
        line-height: 12px;
        cursor: default;
    }

    #LiveEQ {
        position: absolute;
        top: 33%;
        left: 54%;
        text-align: center;
        background-color: #0E51F7;
        border-radius: 50%;
        width: 14px;
        height: 14px;
        font-size: 12px;
        line-height: 12px;
        cursor: default;
    }

    #Lique {
        position: absolute;
        bottom: 33%;
        left: 79%;
        text-align: center;
        background-color: #0E51F7;
        border-radius: 50%;
        width: 14px;
        height: 14px;
        font-size: 12px;
        line-height: 12px;
        cursor: default;
    }

    .help-tip:before {
        content: '?';
        font-weight: bold;
        color: #fff;
    }

    .help-tip:hover p {
        display: block;
        transform-origin: 100% 0%;
        -webkit-animation: fadeIn 0.3s ease-in-out;
        animation: fadeIn 0.2s ease-in-out;
        visibility: visible;
        z-index: 8;
    }

    .help-tip p {
        display: none;
        visibility: hidden;
        text-align: left;
        background-color: #1E2021;
        padding: 5px;
        width: 300px;
        position: absolute;
        border-radius: 3px;
        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.95);
        left: -4px;
        color: #FFF;
        font-size: 12px;
        font-family: verdana;
        line-height: 1.4;
    }

    .help-tip p:before {
        position: absolute;
        content: '';
        width: 0;
        height: 0;
        border: 5px solid transparent;
        border-bottom-color: #1E2021;
        left: 40px;
        bottom: -40px;
    }

    .help-tip p:after {
        content: '';
        position: absolute;
        margin-top: -5px;
        border-width: 5px;
        top: 50%;
        right: 105%;
    }

    @-webkit-keyframes fadeIn {
        0% {
            opacity: 0;
            transform: scale(0.6);
        }
        100% {
            opacity: 100%;
            transform: scale(1);
        }
    }

    /* Tablet */
    @media only screen and (max-width:770px) {
        .help-tip {
            width: 33.3333%;
        }
        .mb-watermark {
            margin-left: 33.3333%;
        }
    }
    /* Mobile */

    @media only screen and (max-width:640px) {}

